# annotate-snippets-rs

./: .clippy.toml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  typos.toml
.github/: renovate.json5
.github/workflows/: audit.yml  ci.yml  pre-commit.yml  release.yml  rust-next.yml  rust.yml
benches/: bench.rs  simple.rs
examples/: custom_error.rs  custom_level.rs  elide_header.rs  expected_type.rs  footer.rs  format.rs  highlight_message.rs  highlight_source.rs  highlight_title.rs  id_hyperlink.rs  multi_suggestion.rs  multislice.rs  struct_name_as_context.rs
src/: annotation.rs  display_list.rs  display_list_formatting.rs  format.rs  format_color.rs  formatted_display_list.rs  input.rs  level.rs  lib.rs  slice.rs  snippet.rs  span.rs
src/display_list/: annotation.rs  ds_from_snippet.rs  ds_struct.rs  from_snippet.rs  line.rs  list.rs  mod.rs  structs.rs
src/formatter/: mod.rs  style.rs  types.rs
src/renderer/: default.rs  display_list.rs  margin.rs  mod.rs  no_graphics.rs  render.rs  source_map.rs  styled_buffer.rs  stylesheet.rs
src/renderer/display/: constants.rs  cursor_line.rs  display_annotations.rs  display_header.rs  display_line.rs  display_list.rs  display_mark.rs  display_set.rs  display_text.rs  end_line.rs  mod.rs
src/renderers/: mod.rs
src/renderers/ascii_default/: mod.rs
src/renderers/ascii_default/marks/: mod.rs
src/renderers/ascii_default/styles/: color.rs  color2.rs  mod.rs  plain.rs
src/renderers/html/: mod.rs
src/structs/: display_list.rs  formatted_display_list.rs  mod.rs  snippet.rs
src/styles/: color.rs  mod.rs  plain.rs
src/stylesheets/: color.rs  mod.rs  no_color.rs
tests/: dl_from_snippet.rs  examples.rs  fixtures.rs  fixtures_test.rs  formatter.rs  hyperlink.rs  no_graphics.rs  rustc_tests.rs
tests/color/: ann_eof.rs  ann_insertion.rs  ann_multiline.rs  ann_multiline2.rs  ann_multiline_highlight_source.rs  ann_removed_nl.rs  ensure_emoji_highlight_width.rs  first_snippet_is_primary.rs  fold_ann_multiline.rs  fold_bad_origin_line.rs  fold_leading.rs  fold_trailing.rs  highlight_diff_line_with_wide_characters.rs  highlight_duplicated_diff_lines.rs  highlight_first_line_tab_371.rs  highlight_source.rs  highlight_source_multi_width_chars.rs  highlight_source_zero_width_chars.rs  issue_9.rs  main.rs  multiline_removal_indent.rs  multiline_removal_last_line_tabs.rs  multiline_removal_suggestion.rs  multiple_annotations.rs  multiple_highlight_duplicated.rs  multiple_multiline_removal.rs  primary_title_second_group.rs  simple.rs  strip_line.rs  strip_line_char.rs  strip_line_non_ws.rs  styled_title.rs
tests/deserialize/: mod.rs
tests/diff/: mod.rs
tests/fixtures/: deserialize.rs  main.rs  multiline_annotation.txt  multiline_annotation.yaml  multiline_annotation2.txt  multiline_annotation2.yaml  multiple_annotations.yaml
tests/fixtures/color/: ann_eof.toml  ann_insertion.toml  ann_multiline.toml  ann_multiline2.toml  ann_removed_nl.toml  ensure-emoji-highlight-width.toml  fold_ann_multiline.toml  fold_bad_origin_line.toml  fold_leading.toml  fold_trailing.toml  issue_9.toml  multiple_annotations.toml  simple.toml  strip_line.toml  strip_line_char.toml  strip_line_non_ws.toml
tests/fixtures/no-color/: ann_multiline2.toml  fold_leading.toml  issue_52.toml  issue_52.txt  issue_9.toml  multiline_annotation.toml  multiline_annotation.txt  multiline_annotation.yaml  multiline_annotation2.toml  multiline_annotation2.txt  multiline_annotation2.yaml  multiline_annotation3.toml  multiline_annotation3.yaml  multiple_annotations.toml  multiple_annotations.yaml  one_past.toml  one_past.txt  simple.toml  simple.txt  simple.yaml  strip_line.toml  strip_line_char.toml  strip_line_non_ws.toml
tests/snippet/: mod.rs
