[package]
name = "annotate-snippets"
version = "0.10.1"
edition = "2021"
rust-version = "1.73"  # MSRV
authors = ["Zibi Braniecki <gandalf@mozilla.com>"]
description = "Library for building code annotations"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang/annotate-snippets-rs"
readme = "README.md"
keywords = ["code", "analysis", "ascii", "errors", "debug"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anstyle = "1.0.4"
unicode-width = "0.1.11"

[dev-dependencies]
criterion = "0.5.1"
difference = "2.0.0"
glob = "0.3.1"
serde = { version = "1.0.192", features = ["derive"] }
toml = "0.5.11"

[[bench]]
name = "simple"
harness = false

[features]
default = []
